--- a/style.css
+++ b/style.css
@@ -226,6 +226,11 @@ header {
   position: relative;
 }
 
+.products-img > img {
+  border-radius: 16px;
+  box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.4);
+}
+
 .campaign-text {
  width: 150px;
   position: absolute;
@@ -488,6 +493,25 @@ margin-top: 16px;
   left: -10%;
 }
 
+/* .usage-img {
+  position: relative;
+  width: 100%;
+  height: fit-content;
+}
+
+.usage-img::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: inset 0 0 20px rgba(171, 34, 57, 0.08),
+              inset 0 0 20px rgba(171, 34, 57, 0.08),
+              inset 0 0 20px rgba(171, 34, 57, 0.08),
+              inset 0 0 20px rgba(171, 34, 57, 0.08);
+} */
+
 .usage-text {
   font-size: 20px;
   margin-top: 24px;
@@ -523,3 +547,15 @@ margin-top: 16px;
   color: #fff;
 }
 
+/* ------------
+    voices
+---------------*/
+
+.voices-title {
+  margin-bottom: 56px;
+}
+
+.voices-title-img {
+  margin: 0 auto;
+  width: 50%;
+}
