--- a/style.css
+++ b/style.css
@@ -705,3 +705,19 @@ dl > div.appear .plus {
     transform: none;
   }
 }
+
+/* ------------
+    footer
+---------------*/
+footer {
+  background-color: rgba(171, 34, 57, 0.08);
+  padding: 80px 0 32px;
+}
+
+.company-details {
+   display: flex;
+}
+
+address {
+  display: flex;
+}
