footer作成しました。

--- a/style.css
+++ b/style.css
@@ -716,8 +716,64 @@ footer {
 
 .company-details {
    display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-bottom: 48px;
 }
 
-address {
-  display: flex;
+.company-details li a {
+  font-size: 14px;
+  color: #000;
+  padding: 0 32px;
+  transition: color .3s;
 }
+
+.company-details li a:hover {
+  opacity: 0.6;
+}
+
+.company-details li {
+  /* outline:  1px solid red; */
+  position: relative;
+}
+
+.company-details li:nth-child(2)::before,
+.company-details li:nth-child(2)::after {
+  content: '';
+  width: 1px;
+  height: 100%;
+  background-color: #AB2239;
+  position: absolute;
+  top: 0;
+}
+
+.company-details li:nth-child(2)::before {
+  left: 0;
+}
+
+.company-details li:nth-child(2)::after {
+  right: 0;
+}
+
+footer .header-logo {
+  width: 120px;
+}
+
+.company-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 48px;
+}
+
+.phone a {
+  color: #000;
+}
+
+small {
+  font-size: 12px;
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+}
+
