申し込みボタンのレスポンシブを実装しました。

--- a/style.css
+++ b/style.css
@@ -920,6 +920,14 @@ small {
   .point-title h4 {
     text-align: center;
   }
+
+
+  /* application-btn */
+
+  #application-btn {
+    width: 30%;
+  }
+
 }
   
 
