--- a/style.css
+++ b/style.css
@@ -83,26 +83,16 @@ header {
   font-size: 24px;
   font-weight: 600;
   margin-top: 56px;
-  display: inline-block;
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .sub-catchphrase p::before,
 .sub-catchphrase p::after {
  content: '';
- position: absolute;
- background-color: #AB2239;
- width: 15%;
- height: 2px;
- top: 50%;
-}
-
-.sub-catchphrase p::before {
-  left: -112px;
-}
-
-.sub-catchphrase p::after {
-  right: -112px;
+ border-top: 2px solid #AB2239;
+ width: 12%;
 }
 
 .sub-catch-pc {
@@ -223,7 +213,7 @@ header {
 }
 
 .products-details {
-margin-top: 16px;
+  margin-top: 16px;
 }
 
 .products-details p {
@@ -669,8 +659,6 @@ dl > div.appear .plus {
   visibility: visible;
 }
 
-
-
 /* ------------
     footer
 ---------------*/
@@ -779,21 +767,14 @@ small {
  width: 20%;
 }
 
-.sub-catchphrase p::before {
-  left: -56px;
-}
-
-.sub-catchphrase p::after {
-  right: -56px;
-}
-
 .sub-catch-pc {
   display: block;
 }
 
 .selling-points {
-  width:90%;
+  width:70%;
   gap: 20px;
+  margin: 56px auto 0;
 }
 
 .selling-points img {
@@ -803,7 +784,6 @@ small {
 .sub-selling-points p {
   font-size: 14px;
 }
-
 
 /* solution */
 
@@ -826,8 +806,11 @@ small {
   .point-text p {
     font-size: 14px;
   }
-
 }
+
+/* --------------------------
+        レスポンシブ　970以下
+-----------------------------*/
 
 @media screen and (max-width: 970px){
 
@@ -1011,22 +994,38 @@ small {
     font-size: 14px;
   }
 
-
   /* application-btn */
 
   #application-btn {
     width: 30%;
   }
-
 }
 
+/* --------------------------
+        レスポンシブ　680以下
+-----------------------------*/
+
 @media screen and (max-width: 680px){
+
+  /* main-visual */
+
+  .sub-catchphrase p {
+    font-size: 18px;
+  }
+
+  .sub-catchphrase p::before,
+  .sub-catchphrase p::after {
+    width: 10%;
+  }
+
+  .selling-points {
+    width:90%;
+  }
 
   /* usage */
 
   .usage-description {
     padding-left: 48px;
-    /* flex-direction: column; */
   }
 
   .usage-number {
@@ -1097,8 +1096,6 @@ small {
  .phone a {
   font-size: 14px;
  }
- 
-
 }
   
 
