--- a/style.css
+++ b/style.css
@@ -1022,6 +1022,16 @@ small {
     width:90%;
   }
 
+  /* troubles */
+
+  /* .point-title-small {
+    font-size: 16px;
+  } */
+
+  .point-title > h4 span {
+    font-size: 16px;
+  }
+
   /* usage */
 
   .usage-description {
